[package]
name = "playrsa"
version = "0.3.0"
authors = ["Jens Getreu <getreu@web.de>"]
license = "MIT"
homepage = "https://github.com/getreu/play-rsa/"
repository = "https://github.com/getreu/play-rsa/"
description = "Implementation of RSA primitives for pedagogical purposes."
keywords = [ "Crypto", "RSA", "primes", "gcd", "invert" ]
readme = "README.adoc"
edition = "2018"

[lib]
name = "libplayrsa"

[[bin]]
name = "playrsa"
path = "src/examples/main.rs"

[dependencies]
num = "0.2.1"
rustc-serialize = "0.3.24"
rand = "0.5"
primal = "0.2.3"
num-bigint = { version = "0.2.6", features = ["rand"] }
